# ensemble-protocol

./: .gitignore  BINDINGS.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  SPEC.md
.claude/skills/esp-author/: SKILL.md
.claude/skills/esp-bind/: SKILL.md
.claude/skills/esp-conform/: SKILL.md  validate.py
.claude/skills/esp-coordinate/: SKILL.md
docs/: alignment-agntcy-collaboration-context.md
examples/invoice-delivery/: README.md  demo.py  ensemble.json
schemas/: ensemble.json  envelope.json  member.json
sdk/python/: README.md  pyproject.toml
sdk/python/ensemble_protocol/: __init__.py  ensemble.py  ids.py  lifecycle.py  models.py  patterns.py  roles.py
sdk/python/ensemble_protocol/bindings/: __init__.py  a2a_relay.py
sdk/python/tests/: test_ensemble.py  test_example_ensemble.py  test_ids.py
