[project]
name = "ensemble-protocol"
version = "0.1.0"
description = "Ensemble Protocol (ESP) — group collaboration for specialized AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
  "pydantic>=2.0",
]

[project.optional-dependencies]
a2a = [
  "a2a-sdk[http-server]>=1.1",
  "httpx>=0.28",
]
dev = [
  "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ensemble_protocol"]

[tool.pytest.ini_options]
testpaths = ["tests"]